
 New features and improvements:

   - ofaExerciceCloseAssistant: check that current rough soldes are zero.
   - ofaRecurrentModel: unselect all before creating a new one (todo #1532).
   - ofoAccount: restore v1 export version for annual accountings needs (todo #1533).
   - docs: add 'Attestation de conformité' (fr) for PWI Consultants.

 Bug fixes:

   - ofaAccountStore: global balance takes into account both current and future, rough and validated entries.
   - ofaExerciceCloseAssistant: fix the account and ledger soldes computing on new exercice (todo #1542).
   - ofoEntry: import generated ODs (todo #1534).

 Other changes:

   - ofa_box_csv_get_field_ex(): new function.
   - ofaISignaler::ofa-signaler-exercice-recompute: new signal.
   - ofo_account_get_open_debit(), ofo_account_get_open_credit(): new functions.

-----------------------------------------------------------------------
 Version 0.74
 ============

 Released on 2018- 2-26

 Total files count:    855 files
 Total lines count: 589568 lines
 maintainer/run-distcheck.sh: real	9m51.886s

 New features and improvements:

   - ofaPeriodClose: save size and position of "ArchivingAccountsBalance" dialog box (todo #1516).
   - ofaTVAFormPage, ofaTVARecordPage: have a button to switch to each other (todo #1512).
   - ofaTVAFormPage: the form is now duplicable (todo #1509).
   - ofaTVAFormProperties: improve properties update.
   - ofaTVARecordProperties: better center the label (todo #1515).
   - ofaTVARecordProperties: review life cycle and dynamic of the status (todo #1511).
   - ofaTVARecordTreeview: review column title of the status (todo #1510).

 Bug fixes:

   - ofaITVColumnable: protect column addressing against false identifiers.
   - ofaReconcilPage: disable the clear button at initialization (todo #1528).
   - ofaRestoreAssistant: fix ofaIDBDossierMeta ref count (todo #1507).
   - ofaRestoreAssistant: fix ofaIDBExerciceMeta occurrence count (todo #1508).