@@ -26,6 +26,7 @@
    - ofaRecurrentModel: unselect all before creating a new one (todo #1532).
    - ofoAccount: restore v1 export version for annual accountings needs (todo #1533).
    - docs: add 'Attestation de conformité' (fr) for PWI Consultants.
+   - ofa_unzip: list embedded streams, dump each header and data stream.
 
  Bug fixes:
 
